# xdsl-pdl

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-pyright.yml
experiments/: lit.cfg
experiments/arith-canonicalization-mlir/: addi.mlir  andi.mlir  arith.irdl  cmpi.mlir  extsi.mlir  muli.mlir  ori.mlir  select.mlir  subi.mlir  trunci.mlir  xori.mlir
tests/: test_interpreter_analysis.py  test_pdl_interpreter.py
tests/filecheck/: eq_to_non_eq.mlir  lit.cfg  non_eq_to_eq.mlir
tests/filecheck/analyze_irdl_invariants/: mulsi_example.irdl  mulsi_extended_bug.mlir
tests/filecheck/analyze_irdl_invariants/arith/: addi_add_constant.mlir  addi_mul_negative_one_lhs.mlir  addi_mul_negative_one_rhs.mlir  (+5 more)
tests/filecheck/check_irdl_subset/: eq_to_non_eq.mlir  int_or_vec_to_int.mlir  int_to_int_or_vec.mlir  non_eq_to_eq.mlir
tests/filecheck/pdl_to_irdl_check/: add_commute.mlir  mulsi_extended_bug.mlir
xdsl_pdl/: pdltest.py
xdsl_pdl/analysis/: check_subset_to_z3.py  mlir_analysis.py  pdl_analysis.py  run_with_mlir.py
xdsl_pdl/dialects/: irdl_extension.py  pdl_extension.py  transfer.py
xdsl_pdl/fuzzing/: generate_pdl_matches.py  generate_pdl_rewrite.py
xdsl_pdl/interpreters/: pdl_analysis_interpreter.py  pdl_interpreter_extension.py
xdsl_pdl/passes/: optimize_irdl.py  pdl_to_irdl.py
xdsl_pdl/tools/: analyze_irdl_invariants.py  analyze_pdl_rewrite.py  check_irdl_subset.py  generate_pdl_matches.py  generate_pdl_rewrite.py  generate_table.py  pdl_rewrite_fuzzer.py  pdl_to_irdl_check.py  test_check_irdl_subset.py  test_pdl_to_irdl_check.py
