[project]
name = "xdsl-pdl"
version = "0.1"
description = "PDL experiments in xDSL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "xdsl>=0.13, <0.14",
]

[project.scripts]
generate-pdl-rewrite = "xdsl_pdl.tools.generate_pdl_rewrite:main"
generate-pdl-matches = "xdsl_pdl.tools.generate_pdl_matches:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"